# hypergraph_code_explorer

./: .env.example  .gitignore  AGENT_HANDOFF.md  ARCHITECTURE.md  BUGS.md  CHANGES.md  CLAUDE.md  EXPERIMENTAL_PROTOCOL.md  HUB_NODE_FIX.md  LICENSE  PHASE8_INSTRUCTIONS.md  PLAN_V3.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/specs/archive/: 2026-03-22_tree-sitter-extraction.md
.cursor/: mcp.json
.cursor/rules/: hypergraph.mdc
demo_viz/: _data.js  bottom_sheet.html  floating_card.html  right_drawer.html
docs/: DISTRIBUTION_DECISIONS.md  SAMPLE_TOUR_REPORT.md  bug_13399_viz.html  bug_memory_tours.json  generate_bug_viz.py  hypergraph_rag_v2_plan.md  memory-tours-guide.md  memory_tours.json
docs/archive/: PHASE2_INSTRUCTIONS.md  PHASE5_INSTRUCTIONS.md  PHASE6_INSTRUCTIONS.md  PHASE7_INSTRUCTIONS.md
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/scripts/: start_server.py
plugin/skills/hce-explore/: SKILL.md
plugin/skills/hce-explore/references/: query-guide.md
scripts/: query.py  test_pipeline.py  test_tours.py  visualize.py
skill/: SKILL.md
skill/assets/: viz_template.html
skill/references/: investigator.md  quickstart.md
skill/scripts/: extract_graph.py  generate_viz.py
skills/hce-index/: SKILL.md
skills/hce-index/evals/: evals.json
src/hypergraph_code_explorer/: __init__.py  __main__.py  analyze.py  api.py  cli.py  codemap.py  filters.py  init.py  layout.py  mcp_server.py  memory_tours.py  models.py  pipeline.py  probe.py  visualization.py
src/hypergraph_code_explorer/assets/: viz_template.html
src/hypergraph_code_explorer/extraction/: _legacy_python_extractor.py  code_extractor.py  text_extractor.py  treesitter_extractor.py
src/hypergraph_code_explorer/graph/: builder.py  embeddings.py  simplify.py  summaries.py
src/hypergraph_code_explorer/ingestion/: chunker.py  converter.py
src/hypergraph_code_explorer/retrieval/: context.py  coverage.py  dispatch.py  intersection.py  lookup.py  pathfinder.py  plan.py  semantic.py  textsearch.py  traverse.py
tests/: test_blast_radius.py  test_builder.py  test_cli_integration.py  test_code_extractor.py  test_codemap.py  test_coverage.py  test_dispatch.py  test_hub_node_filtering.py  test_init.py  test_intersection.py  test_lookup.py  test_memory_tours.py  test_models.py  test_pathfinder.py  test_pipeline.py  test_plan.py  test_textsearch.py  test_traverse.py  test_treesitter_extractor.py
