[project]
name = "hypergraph-code-explorer"
version = "0.2.7"
description = "Multi-language hypergraph-based code exploration with edge-intersection traversal, exposed as an MCP server"
license = "MIT"
authors = [{name = "Denson Smith", email = "densonsmith2@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.46.0",
    "python-dotenv>=1.0.0",
    "markitdown[all]>=0.1.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.1",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-php>=0.24.1",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]
server = [
    "mcp>=1.0.0",
]
text = [
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
]
all = [
    "hypergraph-code-explorer[embed,server,text]",
]

[project.scripts]
hce = "hypergraph_code_explorer.cli:main"
hce-server = "hypergraph_code_explorer.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypergraph_code_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
